--- a/index.html
+++ b/index.html
@@ -31,17 +31,6 @@
         <a href="./index.html" class="navbar-brand custom-brand"
           ><img src="./images/WhatsApp Image 2022-05-23 at 9.17.59 PM.jpeg" alt="" class="logo"></a
         >
-        <button
-          class="navbar-toggler border-0"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navContent"
-          aria-controls="navContent"
-          aria-expanded="false"
-          aria-label="toggle nav"
-        >
-          <span class="navbar-toggler-icon custom-toggler-icon"></span>
-        </button>
       </div>
     </nav>
     <!-- Main Content -->
@@ -54,7 +43,7 @@
       let imagesContainer = document.getElementById("images");
       let i;
       for (i = 1; i <= 12; i++) {
-        imagesContainer.innerHTML += `<div class="col-12 col-md-4 col-lg-3 py-3"><a href="./gallery/images/${i}.jpg" data-lightbox="mygallery"><div class="image img-${i}"></div></a></div>`;
+        imagesContainer.innerHTML += `<div class="col-12 col-md-4 col-lg-3 py-3"><a href="./images/${i}.jpeg" data-lightbox="mygallery"><div class="image img-${i}"></div></a></div>`;
       }
     </script>
     <!-- Bootstrap JS -->
