--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="custom-navbar">
       <div class="container">
         <a href="./index.html" class="navbar-brand custom-brand"
-          ><img src="./images/WhatsApp Image 2022-05-23 at 9.17.59 PM.jpeg" alt="" class="logo"></a
+          ><img src="./images/logo.jpeg" alt="" class="logo"></a
         >
       </div>
     </nav>
@@ -42,7 +42,7 @@
     <script>
       let imagesContainer = document.getElementById("images");
       let i;
-      for (i = 1; i <= 24; i++) {
+      for (i = 1; i <= 26; i++) {
         imagesContainer.innerHTML += `<div class="col-12 col-md-4 col-lg-3 py-3"><a href="./images/${i}.jpeg" data-lightbox="mygallery"><div class="image img-${i}"></div></a></div>`;
       }
     </script>
